Experimental CSRF protection, see #4049.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4133 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -80,6 +80,12 @@
     </div>
   </body>
 
+  <form py:match="form[@method='post' and @avoidloop!='true']" 
+        avoidloop="true" py:attrs="select('@*')">
+    <input type="hidden" name="__FORM_TOKEN" value="$form_token"/>
+    ${select('*|text()')}
+  </form>
+
   <xi:include href="site.html"><xi:fallback /></xi:include>
 
 </html>
